Fix header disappearing on smaller resolutions

--- a/static/homestyles.css
+++ b/static/homestyles.css
@@ -29,7 +29,6 @@ body {
 	flex-direction: row;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 	background-color: #242424;
 }
 
